# qt_file_modifier

./: CMakeLists.txt  file_modifier.cpp  file_modifier.h  fm_control_widget.cpp  fm_control_widget.h  fm_file_process_widget.cpp  fm_file_process_widget.h  fm_main_window.cpp  fm_main_window.h  fm_settings_widget.cpp  fm_settings_widget.h  fm_worker.cpp  fm_worker.h  main.cpp
include/: file_worker.h  main_window.h  setting.h
include/widgets/: control_widget.h  dir_input_widget.h  process_widget.h  text_input_widget.h
src/: file_worker.cpp  main.cpp  main_window.cpp
src/widgets/: control_widget.cpp  dir_input_widget.cpp  process_widget.cpp  text_input_widget.cpp
